--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <div class="container">
         <h1 id="title">To Do List</h1>
-        <form action="#">
+        <div>
             <input type="text" id="inputText">
             <input type="submit" id="addToDo" value="add">
             <input type="submit" id="clearToDo" value="clear">
-        </form>
+        </div>
         <div class="ToDoS" id="ToDoContainer"></div>
     </div>
     <script src="script.js"></script>
